Fix vertical alignment of chapter navigation

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -159,11 +159,14 @@ a > .hljs {
 
 .mobile-nav-chapters {
     font-size: 2.5em;
-    text-align: center;
     text-decoration: none;
     width: 90px;
+    height: 55px;
     border-radius: 5px;
     background-color: var(--sidebar-bg);
+
+    display: grid;
+    place-items: center;
 }
 
 .previous {
